--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="carrito.jpg" alt=""width="30"height="24"style="background-color:green">
+                <img src="carrito.jpg" id= "carrito_modal" alt="carrito" width="30"height="24"style="background-color:green">
             </a>
         </div>
     </nav>
@@ -26,20 +26,11 @@
         Launch demo modal
     </button>
     
-    <!-- Modal -->
+ 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                <div class="modal-body d-flex" id="fruta_modal">
                 </div>
             </div>
         </div>
@@ -59,14 +50,20 @@
         crossorigin="anonymous"></script>
         
 <script >
-    const carrito=[]
+    let carrito=[]
 
-    $('.imagen').click(function () {
+    $(".imagen").click(function () {
         let imgsrc = $(this).attr('src');
         carrito.push(imgsrc);
         console.log('carrito', carrito);
-    });
+        $("#fruta_modal").append(`
+        <div class="col-4 d-flex flex-row " >
+            <img src="${imgsrc}" class="w-100 d-inline">
+        </div>
 
+        `)
+    });
+        carrito = []
     function myfunction(){
     //  const fruta_seleccionada=document.getElementById("frutasModal");
         const fruta_seleccionada=document.getElementById("frutasModal").innerHTML="<img src=banana.png>"
